Fix scaling issue with svg on ios

--- a/css/site/_home.scss
+++ b/css/site/_home.scss
@@ -12,6 +12,22 @@ position: relative;
 bottom: -2px;
 }
 
+.svg-wrapper{
+	width: 100%;
+	display: block;
+	height: auto;
+	position: relative;
+	padding-top: 32.95%;
+}
+
+.svg-wrapper svg{
+	position: absolute;
+	top: 0;
+	left: 0;
+	width:100%;
+	height:100%;
+}
+
 .home-page {
 	margin-top: 0;
 }
